--- a/index.html
+++ b/index.html
@@ -11,17 +11,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <section>
+     <section class="top-banner">
             <div class="half">
                     <h1>Welcome To</h1>
                 <h1><span class="name-color">Saddam</span> website</h1>
                 <h3>World-class web developer</h3>
                 <p>I am a beginner website developer.Though i am a student of mechanical enginnering,I try to open my skill on developing website.I am determined to achieve skill on web develooper.</p>
+                <a class="button " target="_blank" href="www.html.com">HIRE ME</a>
                 </div>
                 <div class="half">
                     <img src="images/jhankar.png" alt="">
                 </div>
      </section>
+     <section class="dream">
+                       <div class="half">
+                           <img src="images/jhankar2.png" alt="">
+
+                       </div>
+                       <div class="half">
+                           <h2>Big Dream</h2>
+                            <h3>Become a super web developer</h3>
+                            <p>I am a beginner website developer.Though i am a student of mechanical enginnering,I try to open my skill on developing website.I am determined to achieve skill on web develooper. </p> 
+                            <a class="button" target="_blank" href="www.bigbang.com">Download Resume</a>
+
+                       </div>
+     </section>
+     <section class="area"> 
+                                <h2>Experiences </h2>
+                                <div id="full" class="half box">
+                                    <h2>Full Stack Web Developer</h2>
+                                    <h3 class="org">2021-Present | Pro Level Developer</h3>
+                                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+                                </div>
+                                <div id="baby" class="half box">
+                                    <h2>Baby Web Developer</h2>
+                                    <h3 class="org">2020-2021 | Programming Hero Learner</h3>
+                                    <p>
+                                        They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                                    </p>
+
+                                </div>
+     </section>
+     <footer>
+         <p class="saddam">© Peter Parker 2021, a Programming Hero initiative.</p>
+     </footer>
 
 </body>
 </html>
